Fri Jul 15 19:11:00 2011  Kenta Murata  <mrkn@mrkn.jp>

	* bignum.c (bigsub_int): add RB_GC_GUARD.  This patch is made by
	  Makoto Kishimoto.  fixes #4223 [ruby-dev:42907]

	* bignum.c (bigadd_int): ditto.

Fri Jul 15 14:27:53 2011  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/win32.c, include/ruby/win32.h (rb_w32_io_cancelable_p): renamed
	  from rb_w32_has_cancel_io().  now it takes a parameter as fd to check
	  the fd is console or not, because we cannot cancel console input even
	  if we have cancel_io function.

	* io.c (WAIT_FD_IN_WIN32): call above function instead of the old one,
	  so now we can kill the thread which calls STDIN.gets.
	  the problem was reported by ko1 via IRC.

Fri Jul 15 09:10:41 2011  Hiroshi Nakamura  <nahi@ruby-lang.org>

	* ext/digest/sha2/sha2.c (SHA256_Update, SHA512_Update): avoid Bus
	  Error caused by unalignment access on Sparc-Solaris (and possibly on
	  other similar environment.) This patch just do memcpy always instead
	  of checking architecture. I see no perf drop on my 64bit env. For
	  more details, see #4320.

	* test/digest/test_digest.rb: add test for unalignment access.

Fri Jul 15 01:51:25 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* regint.h (PLATFORM_UNALIGNED_WORD_ACCESS): Power PC does not
	  allow unaligned word access.

	* st.c (UNALIGNED_WORD_ACCESS): x86_64 allows unaligned word
	  access as well as i386.

Thu Jul 14 12:19:34 2011  Hiroshi Nakamura  <nahi@ruby-lang.org>

	* ext/openssl/ossl.c (ossl_verify_cb): trap the exception from
	  verify callback of SSLContext and X509Store and make the
	  verification fail normally. Raising exception directly from callback
	  causes orphan resouces in OpenSSL stack. Patched by Ippei Obayashi.
	  See #4445.

	* test/openssl/test_ssl.rb
	  (test_exception_in_verify_callback_is_ignored): test it.

Tue Jul 12 23:41:49 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* NEWS: add a description of Signal.trap change.
